--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,4 @@
-main: it.escanortargaryen.deathswap.MainClass
+main: it.escanortargaryen.simpledeathswap.MainClass
 
 name: ${project.name}
 description: A plugin for a game called Death Swap
@@ -8,12 +8,12 @@ author: [ EscanorTargaryen ]
 api-version: 1.13
 
 permissions:
-  deathswap:
+  simpledeathswap:
     default: true
-    description: permission to use /deathswap
-  deathswap.gamestart:
+    description: permission to use /simpledeathswap
+  simpledeathswap.gamestart:
     default: op
     description: permission to start a game
-  deathswap.stopgame:
+  simpledeathswap.stopgame:
     default: true
     description: permission to stop a game. Only the owner can disband the game
